# funasr-demo

./: main.py  pyproject.toml  stream.py
